--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "dependencies": {
-    "@testing-library/cypress": "^5.3.0",
-    "@testing-library/dom": "^6.12.2",
-    "cypress": "^4.0.1"
+    "cypress": "^4.0.1",
+    "lodash": "^4.17.15"
   }
 }
